--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
  
   .container {
-
+    display: block;
+    text-align: center;
+    justify-content: center;
+     text-align: center;
    
    
     margin: 0;
@@ -10,3 +13,4 @@
     width: 100%;
    
 }
+
